@@ -91,7 +91,7 @@ public class Jailer {
 	/**
 	 * The Jailer version.
 	 */
-	public static final String VERSION = "2.9.4.p2";
+	public static final String VERSION = "2.9.5";
 
 	/**
 	 * The relational data model.
